--- a/kagami_sakura.html
+++ b/kagami_sakura.html
@@ -43,6 +43,12 @@
     <img src="burubaru/kagamiyama/sakura/20.JPG" class="picture">
 </div>
 <div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/B.JPG" class="picture">
+</div>
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/D.JPG" class="picture">
+</div>
+<div class="picture-container">
     <img src="burubaru/20200331sakura/45.JPG" class="picture">
 </div>
 <div class="picture-container">
@@ -51,6 +57,17 @@
 
 <div class="picture-container">
     <img src="burubaru/kagamiyama/sakura/15.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/C.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/E.JPG" class="picture">
+</div>
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/A.JPG" class="picture">
 </div>
 <div class="picture-container">
     <img src="burubaru/20200331sakura/20.JPG" class="picture">
