--- a/gym.html
+++ b/gym.html
@@ -130,7 +130,15 @@
 </div>
 <div style="text-align: center;">这个炒蛋配吐司像港式早餐。</div>
 
+<div class="picture-container">
+    <img src="gym/A.JPG" class="picture">
+</div>
+<div style="text-align: center;">这是我去健身房早起吃了一段时间的麦当劳，也吃过7-11，也有办公室煮面。</div>
 
+<div class="picture-container">
+    <img src="gym/B.JPG" class="picture">
+</div>
+<div style="text-align: center;">麦当劳有个咖啡好像大陆肯德基的雪顶（雪顶是我研究生一段回忆）/日语フロート，即float。</div>
 
 <p>除了跑步，这几年加入的新运动习惯是游泳，2022年夏天开始。当时我发现西条有游泳池就拉小伙伴去，还买了新泳衣。那叫东广道复康中心（東広島リハビリテーションセンター）频率约1个月2-3次。每次游1公里，游完要不去外面吃，要不回研究室煮面。这是给残疾人的复康中心，有全面的体育设施（除了游泳池还有体育馆，乒乓球，健身房及视障人士跑道）。这里一次性门票500日元，所有设施可用，套票5000元11张。通常🧅买套票我每次给他500。可能时间9:30.我们习惯周三早9:30游。日本游泳池一定要带泳帽。另外我们也打网球，通常这周网球下周游泳。网球运动量不高，不替代跑步，但游泳替代一次的。</p>
 <p>虽然我小时候就会游泳，但没有养成习惯，所以我只是一直跑步。直到我在西条把游泳变成生活日程，现在在香港也是一周游泳一次。</p>
