--- a/car.html
+++ b/car.html
@@ -69,6 +69,11 @@
 <div style="text-align: center;">另一给自己做，圣诞节挂的圣诞树。</div>
 
 <div class="picture-container">
+    <img src="car/A.JPG" class="picture">
+</div>
+<div style="text-align: center;">这个是在学校上种菜课学的稻草工艺（わら工芸），我做了个全球唯一的中国结版本。</div>
+
+<div class="picture-container">
     <img src="car/201908C.JPG" class="picture">
 </div>
 <div style="text-align: center;">2019年8月，刚拿到驾照一周周日去完教会开车去广岛市练车。当时去奥特莱斯（outlet）购物及Costco超市。</div>
