--- a/home.html
+++ b/home.html
@@ -222,11 +222,10 @@
 <div style="text-align: center;">自从去了北京，我的手一直有湿疹，时好时不好。这是发作的时候，当时我对墨鱼汁敏感，要用手套处理。后来我天天吃黄姜粉就没事了。</div>
 
 <div class="picture-container">
-    <img src="home/53.JPG" class="picture">
+    <img src="home/22.JPG" class="picture">
 </div>
-<div style="color: red;">***加照片***</div>
 
-<div style="text-align: center;">我脖子多年有湿疹，2023年前特别严重，我狠心一把用饮食调理。戒奶（用椰奶），蛋，小麦，糖，调味戒掉所有辛辣。肉类支持鸡胸肉。坚持了几个月好了很多。后来我冰箱坏了，饮食不方便，差不多一周只吃一次肉。我发现自己越不吃越不想吃。</div>
+<div style="text-align: center;">我脖子多年有湿疹，2023年前特别严重，脖子左右拧也痛，我狠心一把用饮食调理。戒奶（用椰奶），蛋，小麦，糖，调味也不用。肉类支持鸡胸肉。坚持了几个月好了很多。后来我冰箱坏了，饮食不方便，差不多一周只吃一次肉。我发现自己越不吃越不想吃。</div>
 
 
 
