--- a/home_moving_in.html
+++ b/home_moving_in.html
@@ -17,76 +17,80 @@
     <main class="content">
         <article>
             <p>上一章</p>
+<p>2017年11月30日，我提着行李箱上班，下班后坐飞机到广岛。</p>
 
 <div class="picture-container">
     <img src="home/moving_in/20171130_1.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">东京羽田机场候机。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171130_3.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">到广岛机场了，随后坐大巴去白市电车站再坐两站电车到西条。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171130_2.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">白市车站的旅游广告</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171130_4.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">到西条了。由于比较晚（10点），酒店的人还打电话给我。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171130_5.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是西条第一大街ブールバール，我下车第一反应怎么这里那么黑...</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171130_6.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">到酒店了，当时还不知道这里是酒都。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171130_7.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">去挨着酒店的超市ハロズ买晚餐，看到广岛名菜广岛烧。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171130_9.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">最后买了特价的担担面。</div>
+
+<p>第二天起来，就去市役所办手续，约了地产中介的人领钥匙。我当时比计划时间晚了，大概九点半才到，送床来的人早就到了等着我。</p>
 
 <div class="picture-container">
     <img src="home/moving_in/20171201_1.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">信箱密码</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171201_2.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">大宅大门 - エルドラードA番館</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171201_5.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">来看看阳台</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171201_3.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">第一件送来的家居，其他的今天陆续送来。话说我来之前就看好，电视冰箱这些大型家具要下单后两周才送，所以就两周前就买好。床，桌子这些都是提前买好，安排第一天来的时候就送来。只有书桌延迟了发货。我当然可以先来然后才买，但我希望给自己最好的。最好就是来了尽快安定下来，不为家里事情操心，所以都一早安排好。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171201_4.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">客厅的四人餐桌</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171201_9.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">很快就到中午，去了家里附近的我马拉面。话说我觉得我马是这里最好吃的拉面店。午餐一碗拉面+一份炒饭或饺子大概800日元。</div>
+
 
 <div class="picture-container">
     <img src="home/moving_in/20171201_10.JPG" class="picture">
@@ -98,53 +102,52 @@
 </div>
 <div style="text-align: center;"></div>
 
+<p>吃完饭得回家开始安装了。</p>
+
 <div class="picture-container">
     <img src="home/moving_in/20171201_7.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是桌子安装说明</div>
 
 <div class="picture-container">
     <img src="home/moving_in/5.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">我知道所有家具要自己安装，所以特意买了螺丝刀套装。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171201_6.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">四张凳子</div>
 
 <div class="picture-container">
     <img src="home/moving_in/8.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">桌子</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171202_14.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">安装这个桌子费了我不少劲。话说，这个椅子不太稳固，我经常坐的椅子坐着坐着有一条腿差不多断了，还好没有出意外。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171202_16.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">完成图，桌上是我买的螺丝刀套装。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171202_17.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">凳子的标签怎样也撕不掉</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171203_5.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">不到几天桌子就被我弄得乱成这样。</div>
+
+<p>然后是装灯了。日本的灯其实全国格式统一，很容易自己装的。不过一开始我不懂，撞坏了一个...</p>
 
 <div class="picture-container">
     <img src="home/moving_in/20171202_8.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="home/moving_in/20171202_7.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
@@ -156,12 +159,12 @@
 <div class="picture-container">
     <img src="home/moving_in/20171202_12.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">灯是已经被我弄坏了的。这个在网上买，后来在教会附近的Mr Max买了新的。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171202_11.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">卧室的灯就站在桌子上装。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/20171202_10.JPG" class="picture">
