--- a/home_moving_in.html
+++ b/home_moving_in.html
@@ -144,6 +144,13 @@
 </div>
 <div style="text-align: center;">不到几天桌子就被我弄得乱成这样。</div>
 
+<p>12月1日大概4点多，我就经ブールバール走路去广大见老板了。看到这个烟囱，我就感觉我终于来了！</p>
+
+<div class="picture-container">
+    <img src="burubaru/HU/14.JPG" class="picture">
+</div>
+
+
 <p>然后是装灯了。日本的灯其实全国格式统一，很容易自己装的。不过一开始我不懂，撞坏了一个...</p>
 
 <div class="picture-container">
@@ -169,12 +176,12 @@
 <div class="picture-container">
     <img src="home/moving_in/20171202_10.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">装好了！</div>
 
 <div class="picture-container">
     <img src="home/moving_in/2.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是最后到的书桌，我之后一个周末装的，这个工程很大，每步要跟足说明书。</div>
 
 
 <div class="picture-container">
@@ -185,18 +192,19 @@
 <div class="picture-container">
     <img src="home/moving_in/1.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">成了！</div>
 
 <div class="picture-container">
     <img src="home/moving_in/3.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">我还给家里添了个高级咖啡机，10000多日元的，不过打奶泡的地方不好用，很快坏了。我最喜欢喝意大利Lavazza的Ore。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/4.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">我还布置了家具，这是50年代日本辐射渔船第五福龙丸的纪念品。</div>
 
+<p>下面就是12月2号的晚餐，忘了哪里吃了。</p>
 <div class="picture-container">
     <img src="home/moving_in/20171202_1.JPG" class="picture">
 </div>
@@ -220,8 +228,9 @@
 <div class="picture-container">
     <img src="home/moving_in/20171203_1.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">我家下楼就有公交站，这是当时的公交车次。</div>
 
+<p>刚来去超市巡视下，这里的超市虽大，但菜品觉得没东京丰富，喜之次没有。鸡爪猪肚猪耳朵这些也没有动静容易买，一般要去中国超市。</p>
 <div class="picture-container">
     <img src="home/moving_in/20171203_2.JPG" class="picture">
 </div>
@@ -245,7 +254,7 @@
 <div class="picture-container">
     <img src="home/moving_in/6.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">晚上来一顿正宗的广岛烧，在家里附近家庭开的店，疫情期间关了。</div>
 
 <div class="picture-container">
     <img src="home/moving_in/9.JPG" class="picture">
