--- a/home_plant.html
+++ b/home_plant.html
@@ -82,10 +82,16 @@
 </div>
 <div style="text-align: center;">我后来直接什么能种的都放进去。这是红葱头。</div>
 
+
+<div style="text-align: center;">有一年（2021还是2022），我晒了很多柿子。其实之前也吃过别人晒的柿子，但没想过自己晒，嫌麻烦。事缘有次农家卖已经串起来的柿子，自己只需要削皮及挂起来就可以。由于很方便我就买了。试过一次之后觉得好玩，我的能量就来，不嫌麻烦，自己买绳子串。我又一次经历第一步推动力的重要性。</div>
+
+<div class="picture-container">
+    <img src="home/food/kaki.JPG" class="picture">
+</div>
+
 <div class="picture-container">
     <img src="home/plant/12.JPG" class="picture">
 </div>
-<div style="text-align: center;">有一年（2021还是2022），我晒了很多柿子。其实之前也吃过别人晒的柿子，但没想过自己晒，嫌麻烦。事缘有次农家卖已经串起来的柿子，自己只需要削皮及挂起来就可以。由于很方便我就买了。试过一次之后觉得好玩，我的能量就来，不嫌麻烦，自己买绳子串。我又一次经历第一步推动力的重要性。</div>
 
 <div class="picture-container">
     <img src="home/plant/4.JPG" class="picture">
