--- a/home_friends.html
+++ b/home_friends.html
@@ -18,11 +18,12 @@
         <article>
             <p>上一章</p>
 
-
+<div style="text-align: center;">我这小家经常高朋满座。这章分享一下照片。</div>
+<div style="text-align: center;">下面是2020年4月准备去于传道家，在我家准备的。</div>
 <div class="picture-container">
     <img src="home/2020.04xiaoxue/2.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">绿豆绿（即豌豆黄）。过筛是特别麻烦的事情，不过我把这最“灵魂”的工作交托给别人（我说话都很好听，目的为让人甘心情愿给我）。</div>
 
 <div class="picture-container">
     <img src="home/2020.04xiaoxue/9.JPG" class="picture">
@@ -42,16 +43,16 @@
 <div class="picture-container">
     <img src="home/2020.04xiaoxue/3.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">完了喝杯咖啡庆祝</div>
 <div class="picture-container">
     <img src="home/2020.04xiaoxue/10.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">出发过去了</div>
 
 <div class="picture-container">
     <img src="home/2020.04xiaoxue/4.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">花花要做家乡的干笋。每做一部都打电话给老爸问。</div>
 
 <div class="picture-container">
     <img src="home/2020.04xiaoxue/5.JPG" class="picture">
@@ -61,33 +62,28 @@
 <div class="picture-container">
     <img src="home/2020.04xiaoxue/6.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">吃饭了</div>
 
 <div class="picture-container">
     <img src="home/2020.04xiaoxue/7.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="home/2020.04xiaoxue/10.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">甘笋焖肉，用高压锅做的。</div>
 
 
 <div class="picture-container">
     <img src="home/friends/15.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">2017年3月，我在东京认识，在NPO做兼职的Mikiti。</div>
 
 <div class="picture-container">
     <img src="home/friends/16.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">2018年5月，来自德国的前同事Sabina。</div>
 
 <div class="picture-container">
     <img src="home/friends/21.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是我们有次去吴的小岛旅行吃过的蛋糕和冰淇淋，当时大家都很喜欢。有次聚会前我就买了请大家吃，他们很惊喜。</div>
 
 <div class="picture-container">
     <img src="home/friends/1.JPG" class="picture">
@@ -102,12 +98,12 @@
 <div class="picture-container">
     <img src="home/friends/10.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这个冰淇淋用本地柠檬，蛋糕用本地橘子，都很好吃的。</div>
 
 <div class="picture-container">
     <img src="home/friends/9.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是另一次聚会，这个日式折纸我教过很多朋友做的。</div>
 
 <div class="picture-container">
     <img src="home/friends/12.JPG" class="picture">
@@ -117,7 +113,7 @@
 <div class="picture-container">
     <img src="home/friends/11.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是学长毕业去北九州前，送他猫头鹰。</div>
 
 <div class="picture-container">
     <img src="home/friends/13.JPG" class="picture">
@@ -125,79 +121,75 @@
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-    <img src="home/friends/2.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
     <img src="home/friends/25.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">和mm们聚会</div>
 
 <div class="picture-container">
-    <img src="home/friends/22.JPG" class="picture">
+    <img src="home/friends/2.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">自己的作品</div>
 
 <div class="picture-container">
     <img src="home/friends/23.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">会运动的我当然还教人做练习</div>
+
+<div class="picture-container">
+    <img src="home/friends/22.JPG" class="picture">
+</div>
+<div style="text-align: center;">这是不合格的，大腿后侧肌肉（hamstring）太绷劲，跑步容易受伤的，要天天做这种拉伸。</div>
 
 <div class="picture-container">
     <img src="home/friends/3.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">2022年1月1日庆元旦，我买了paganini的半生芝士蛋糕作下午茶。</div>
 
 <div class="picture-container">
     <img src="home/friends/5.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">晚饭吃海鲜和牛烧烤（那段期间paypay买菜7折），饮我之前出买的葡萄酒。</div>
 
 <div class="picture-container">
     <img src="home/friends/4.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">花花是永远的洗碗公主。</div>
 
 <div class="picture-container">
     <img src="home/friends/17.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">又一次和教会朋友聚会</div>
 
 <div class="picture-container">
     <img src="home/friends/18.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">2020年疫情下的中东菜</div>
 
 <div class="picture-container">
     <img src="home/friends/19.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">2020年12月底，那天登火山，晚饭在我家。</div>
 
 <div class="picture-container">
     <img src="home/friends/26.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">2023年2月小羽专门从福冈过来看我。</div>
 
 <div class="picture-container">
     <img src="home/friends/14.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">干杯！这是意大利酒+柠檬汁。</div>
 
 <div class="picture-container">
     <img src="home/friends/24.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">又干杯！</div>
 
+<div style="text-align: center;">这几年一个收获就是DIY护肤品。话说在东京某天我产生了开公众号写护肤品成分科普的念头。在广岛某天，我看到一篇文献，把occlusive moisturizer及humectant（滋润东西可分开三类，还有第三种是emollient）混合一起，可以大大加强滋润效果。碰巧我家里有，分别是凡士林及甘油，我就试试了，成了我第一款产品。万事起头难，有了第一款产品后，之后idea陆续来。</div>
 <div class="picture-container">
     <img src="home/cosmetics/2.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="home/cosmetics/7.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">做散粉</div>
 
 <div class="picture-container">
     <img src="home/cosmetics/9.JPG" class="picture">
@@ -205,32 +197,37 @@
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
+    <img src="home/cosmetics/7.JPG" class="picture">
+</div>
+<div style="text-align: center;">使用前</div>
+
+<div class="picture-container">
     <img src="home/cosmetics/4.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">使用后</div>
 
 <div class="picture-container">
     <img src="home/cosmetics/6.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">祛痘印度泥面膜</div>
 
 
     <video controls style="width: 60%; height: auto;">
         <source src="home/cosmetics/印度泥.MOV" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-   <div style="text-align: center;">印度泥面膜 </div>
+   <div style="text-align: center;"></div>
 
 
 <div class="picture-container">
     <img src="home/cosmetics/5.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">有次出门花花给我用她的pon pon powder，我一看成分很简单。后来知道变性玉米淀粉是最吸油的，直接买了这个给她试试。</div>
 
 <div class="picture-container">
     <img src="home/cosmetics/1.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">有次花花送沐浴球，我又查了一下，原来又很简单的。</div>
 
 <div class="picture-container">
     <img src="home/cosmetics/8.JPG" class="picture">
@@ -240,7 +237,7 @@
 <div class="picture-container">
     <img src="home/cosmetics/3.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">润唇膏，现在还没用完。（2024年8月）</div>
 
 
 
