--- a/home.html
+++ b/home.html
@@ -132,6 +132,61 @@
 </div>
 <div style="text-align: center;">这是用米袋做的时尚购物袋。有次去农家超市买菜送这个，之后我自己查了下，网上有教程，就买了些米袋自己做了。</div>
 
+<div style="text-align: center;">这几年一个收获就是DIY护肤品。话说在东京某天我产生了开公众号写护肤品成分科普的念头。在广岛某天，我看到一篇文献，把occlusive moisturizer及humectant（滋润东西可分开三类，还有第三种是emollient）混合一起，可以大大加强滋润效果。碰巧我家里有，分别是凡士林及甘油，我就试试了，成了我第一款产品。万事起头难，有了第一款产品后，之后idea陆续来。</div>
+<div class="picture-container">
+    <img src="home/cosmetics/2.JPG" class="picture">
+</div>
+<div style="text-align: center;">做散粉</div>
+
+<div class="picture-container">
+    <img src="home/cosmetics/9.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="home/cosmetics/7.JPG" class="picture">
+</div>
+<div style="text-align: center;">使用前</div>
+
+<div class="picture-container">
+    <img src="home/cosmetics/4.JPG" class="picture">
+</div>
+<div style="text-align: center;">使用后</div>
+
+<div class="picture-container">
+    <img src="home/cosmetics/6.JPG" class="picture">
+</div>
+<div style="text-align: center;">祛痘印度泥面膜</div>
+
+
+    <video controls style="width: 60%; height: auto;">
+        <source src="home/cosmetics/印度泥.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;"></div>
+
+
+<div class="picture-container">
+    <img src="home/cosmetics/5.JPG" class="picture">
+</div>
+<div style="text-align: center;">有次出门花花给我用她的pon pon powder，我一看成分很简单。后来知道变性玉米淀粉是最吸油的，直接买了这个给她试试。</div>
+
+<div class="picture-container">
+    <img src="home/cosmetics/1.JPG" class="picture">
+</div>
+<div style="text-align: center;">有次花花送沐浴球，我又查了一下，原来又很简单的。</div>
+
+<div class="picture-container">
+    <img src="home/cosmetics/8.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="home/cosmetics/3.JPG" class="picture">
+</div>
+<div style="text-align: center;">润唇膏，现在还没用完。（2024年8月）</div>
+
+
 <div class="picture-container">
     <img src="home/26.JPG" class="picture">
 </div>
@@ -216,6 +271,7 @@
 <div style="text-align: center;">小羽离开西条时给我的寿喜锅，经常用来做饭。还有花花送的帽子。</div>
 
 
+
 <div class="picture-container">
     <img src="home/51.JPG" class="picture">
 </div>
@@ -226,6 +282,11 @@
 </div>
 
 <div style="text-align: center;">我脖子多年有湿疹，2023年前特别严重，脖子左右拧也痛，我狠心一把用饮食调理。戒奶（用椰奶），蛋，小麦，糖，调味也不用。肉类支持鸡胸肉。坚持了几个月好了很多。后来我冰箱坏了，饮食不方便，差不多一周只吃一次肉。我发现自己越不吃越不想吃。</div>
+
+<div class="picture-container">
+    <img src="home/food/29.JPG" class="picture">
+</div>
+<div style="text-align: center;">早餐我总是看韩联社新闻。</div>
 
 
 
